--- a/docs/training-sampling.mdx
+++ b/docs/training-sampling.mdx
@@ -104,7 +104,7 @@ examples = [
 # Convert examples into the format expected by the training client
 from tinker import types
 
-# Get the tokenizer from the training client
+# Get the tokenizer from the training client (returns a transformers AutoTokenizer)
 tokenizer = training_client.get_tokenizer()
 
 def process_example(example: dict, tokenizer) -> types.Datum:
@@ -166,33 +166,6 @@ Input                Target               Weight
 'it'                 '-s'                 1.0
 '-s'                 'ay'                 1.0
 'ay'                 '\n\n'               1.0
-```
-
-### Getting a tokenizer
-
-The `SamplingClient` does not provide direct access to a `get_tokenizer()` method.
-
-To tokenize inputs, use one of these approaches:
-
-**Option 1: Via TrainingClient**
-
-```python
-import tinker
-from tinker import types
-
-service_client = tinker.ServiceClient()
-base_model = "Qwen/Qwen3-VL-30B-A3B-Instruct"
-training_client = service_client.create_lora_training_client(base_model=base_model)
-tokenizer = training_client.get_tokenizer()
-```
-
-**Option 2: Via HuggingFace AutoTokenizer**
-
-```python
-from transformers import AutoTokenizer
-
-base_model = "Qwen/Qwen3-VL-30B-A3B-Instruct"
-tokenizer = AutoTokenizer.from_pretrained(base_model)
 ```
 
 ## Vision inputs
