--- a/docs/rl/rl-envs.mdx
+++ b/docs/rl/rl-envs.mdx
@@ -59,5 +59,5 @@ The player model (which we fine-tune) is also based on that same model.
 You can run the training script as follows:
 
 ```bash
-python -m tinker_cookbook.recipes.twenty_questions.train
+python -m tinker_cookbook.recipes.multiplayer_rl.twenty_questions.train
 ```
