dumb typos changes

--- a/docs/training-sampling.mdx
+++ b/docs/training-sampling.mdx
@@ -37,7 +37,7 @@ training_client = service_client.create_lora_training_client(
     base_model=base_model
 )
 ```
-As the name suggests, this model was already finetuned for chat/instruction-following. You should check the details of the model you're using in their system cards.
+As the name suggests, this model was already fine-tuned for chat/instruction-following. You should check the details of the model you're using in their system cards.
 
 ## Preparing the training data
 
